# yeastregulatorydbstack_deprecated

./: .gitignore  LICENSE  README.md  launch.sh  pyproject.toml
yeastregulatorydbstack/: create_template.py  deploy_stack.py  template_tester.txt  testing_notebook.ipynb
yeastregulatorydbstack/memverge/: django_float.py  test_django_float.py
yeastregulatorydbstack/resources/: __init__.py  alb.py  alb_orig.py  ecs_fargate.py  ecs_fargate_orig.py  lambda_functions.py  memverge_network.py  rds_redis_ec2.py  security_groups.py
